--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,6 @@ INCLUDE(GNUInstallDirs)
 
 FIND_PACKAGE(Python3 COMPONENTS Development Development.Embed)
 
-IF( NOT "${Python_Development.Embed_FOUND}" )
+IF( NOT "${Python3_Development.Embed_FOUND}" )
     MESSAGE( WARNING "Python_Development Embed not found" )
 ENDIF()
