--- a/hello-world-docker-action/Dockerfile
+++ b/hello-world-docker-action/Dockerfile
@@ -4,4 +4,4 @@ RUN expr 4 \* 6
 COPY . /git
 RUN dnf -y install clang cmake diffutils freecell-solver make perl-core perl-devel python3-devel python3-pip python3-pysol-cards
 RUN pip install --upgrade pysol_cards
-RUN set -e -x; cd /git ; gmake retest
+ENTRYPOINT ["/bin/sh", "-c", " set -e -x; cd /git ; gmake retest",]
