fix more functionality in the docker-based-ci
we use https://docs.github.com/en/actions/sharing-automations/creating-actions/creating-a-docker-container-action as a tutorial

--- a/hello-world-docker-action/Dockerfile
+++ b/hello-world-docker-action/Dockerfile
@@ -4,4 +4,4 @@ RUN expr 4 \* 6
 COPY . /git
 RUN dnf -y install clang cmake diffutils freecell-solver make perl-core perl-devel python3-devel python3-pip python3-pysol-cards
 RUN pip install --upgrade pysol_cards
-ENTRYPOINT ["/bin/sh", "-c", " set -e -x; cd /git ; gmake retest",]
+RUN set -e -x; cd /git ; gmake retest
