Extract a method or a function.
This is Refactoring / code cleanup.

See:

* https://refactoring.com/catalog/extractMethod.html

* https://en.wikipedia.org/wiki/Code_refactoring

* https://www.refactoring.com/

* https://www.joelonsoftware.com/2002/01/23/rub-a-dub-dub/

Some small optimisations may have slipped in as well.

--- a/hello-world-docker-action/Dockerfile
+++ b/hello-world-docker-action/Dockerfile
@@ -2,7 +2,8 @@ FROM fedora:42
 
 RUN echo helloworld
 
-RUN expr 4 \* 6
+RUN expr 4 '*' 6
+
 COPY . /git
 RUN dnf -y install clang cmake diffutils freecell-solver make perl-core perl-devel python3-devel python3-pip python3-pysol-cards
 RUN pip install --upgrade pysol_cards
