continue adding the workflows file.
we use https://docs.github.com/en/actions/sharing-automations/creating-actions/creating-a-docker-container-action as our tutorial

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,6 @@ jobs:
         steps:
         -   id: hellodocker
             name: docker test action step
-            uses: pysol-cards-in-c/hello-world-docker-action@v2
+            uses: pysol-cards-in-c/hello-world-docker-action
 'on':
 - push
