try2simplify docker-ci; fix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,6 @@ jobs:
         steps:
         -   image: Dockerfile.standalone
             name: docker test action step
-            using: docker
+            uses: docker
 'on':
 - push
