try2simplify docker-ci; fix dockerfile key

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,7 @@ jobs:
         name: A job to test docker
         runs-on: ubuntu-latest
         steps:
-        -   image: Dockerfile.standalone
-            name: docker test action step
-            uses: docker
+        -   name: docker test action step
+            uses: Dockerfile.standalone
 'on':
 - push
